<resources>
    <string name="app_name">L&amp;F</string>
    <string name="ID">E-mail</string>
    <string name="PW">비밀번호</string>
    <string name="Login">로그인</string>
    <string name="Register">회원가입</string>
    <string name="nickname">닉네임</string>
    <string name="check_pw">비밀번호 확인</string>
    <string name="GoLogin">로그인 화면</string>
    <string name="name">이름</string>
    <string name="phoneNum">전화번호</string>
    <string name="home">홈</string>
    <string name="camera">카메라</string>
    <string name="gps">GPS</string>
    <string name="profile">내 정보</string>
    <string name="create">글쓰기</string>
    <string name="preview">미리보기</string>
    <string name="title">제목</string>
    <string name="content">내용</string>
    <string name="upload">작성하기</string>
    <string name="location">위치</string>
    <string name="catalog">분류</string>
    <string name="capture">사진 촬영</string>
    <string name="search">검색</string>
    <string name="previous">이전</string>
    <string name="next">다음</string>
    <string name="road">도로명</string>
    <string name="address">지번</string>
</resources>